--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.5",
     "expo": "~36.0.0",
+    "expo-av": "^8.0.0",
     "expo-constants": "~8.0.0",
     "expo-font": "~8.0.0",
     "expo-permissions": "~8.0.0",
@@ -21,6 +22,7 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-star-rating": "^1.1.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.1",
     "react-navigation-stack": "^2.1.1",
