--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "~36.0.0",
     "expo-av": "^8.0.0",
     "expo-constants": "~8.0.0",
+    "expo-document-picker": "^8.0.0",
     "expo-font": "~8.0.0",
     "expo-permissions": "~8.0.0",
     "native-base": "^2.13.8",
@@ -25,6 +26,7 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-star-rating": "^1.1.0",
+    "react-native-thumbnail-video": "^0.1.2",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.1",
