--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "expo": "~36.0.0",
     "expo-av": "~8.0.0",
     "expo-constants": "~8.0.0",
-    "expo-document-picker": "~8.0.0",
+    "expo-document-picker": "^8.0.0",
     "expo-font": "~8.0.0",
     "expo-image-picker": "~8.0.1",
     "expo-permissions": "~8.0.0",
