--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "expo-constants": "~8.0.0",
     "expo-document-picker": "^8.0.0",
     "expo-font": "~8.0.0",
-    "expo-image-picker": "~8.0.1",
+    "expo-image-picker": "^8.0.2",
     "expo-permissions": "~8.0.0",
     "native-base": "^2.13.8",
     "react": "~16.9.0",
